# examples

./: .buildinfo  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  batchsuperres.py  correcting  genindex.html  index.html  init_examples.sh  run_cpp_examples.sh  run_distributed_examples.sh  run_python_examples.sh  runtime.txt  search.html  searchindex.js  test.txt  utils.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_template.md  doc_template.md  feature_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: doc-build.yml  main.yml  main_cpp.yml  main_distributed.yaml  main_python.yml
FSDP/: README.md  T5_training.py  requirements.txt  wikihowSep.csv
FSDP/cluster_setup/: README.md
OpenNMT/: .gitignore  .preprocess.lua.swo  .preprocess.lua.swp  LICENSE.md  README.md  convert.sed  preprocess.lua  preprocess.py  train.lua  train.py  translate.lua  translate.py
OpenNMT/data/: src-test-case.txt  src-test.txt  src-train-case.txt  src-train.txt  src-val-case.txt  src-val.txt  tgt-test-case.txt  tgt-test.txt  tgt-train-case.txt  tgt-train.txt  tgt-val-case.txt  tgt-val.txt
OpenNMT/doc/: Quickstart.md  format.py  mkdocs.sh  mkdocs.yml
Transliteration (English-to-Hindi)/: English_to_Hindi_Transliteration.ipynb  NEWS2012RefEnHi1000.xml  NEWS2012TrainingEnHi13937.xml  README.md  weights.pth
VAE/: main.py
_sources/: index.rst.txt
_static/: documentation_options.js  jquery.js  panels-bootstrap.min.css  searchtools.js  sphinx-dropdown.css
actor_critic/: README.md  main.py
beta-vae/: README.md  main.py
center_loss/: README.md  data.py  face_model.py  lfw.py  main.py  requirements.txt  trainer.py  vis.py
cgan/: README.md  cgan.py  requirements.txt
char_level_rnn/: README.md  model.py  names  requirements.txt  train.py  utils.py
cnn_text_classfication/: README.md  main.py  model.py  mydatasets.py  train.py
continuous-bag-of-words/: README.md  cbow.py
controlnet/: autoencoder.py
cpp/: .clang-format
cpp/autograd/: CMakeLists.txt  README.md  autograd.cpp
cpp/custom-dataset/: .gitignore  CMakeLists.txt  README.md  custom-dataset.cpp  info.txt
cpp/dcgan/: CMakeLists.txt  README.md  dcgan.cpp  display_samples.py
cpp/distributed/: CMakeLists.txt  README.md  dist-mnist-gpu.cpp  dist-mnist.cpp
cpp/mnist/: CMakeLists.txt  README.md  mnist.cpp
cpp/own_dataset/: CMakeLists.txt  README.md  dataset.cpp
cpp/own_dataset/test_data/: labels.txt
cpp/sentence_classification/: CMakeLists.txt  README.md
cpp/sentence_classification/TREC/: test.txt  train.txt
cpp/sentence_classification/include/: datautils.h  loader.h  model.h  trainmodel.h
cpp/sentence_classification/src/: datautils.cpp  sentence_classification.cpp
cpp/transfer-learning/: CMakeLists.txt  README.md  classify.cpp  convert.py  main.cpp  main.h
dcgan/: .swp  README.md  main.py  requirements.txt
differentiable_physics/: mass_spring.py  readme.md  requirements.txt
docs/: requirements.txt
face_recognition/: README.md  dataset.py  device.py  imageaug.py  loss.py  main.py  metrics.py  model.py  trainer.py  utils.py
fast_neural_style/: README.md  download_saved_models.py  download_saved_models.sh  download_styling_models.sh  generate.py  net.py  requirements.txt  train.py
fast_rcnn/: README.md  bbox_transform.py  faster_rcnn.py  main.py  main2.py  model.py  roi_pooling.py  rpn.py  utils.py  voc.py
fizzbuzz/: README.md  main.py
fx/: README.md  custom_tracer.py  gpu_profiler.py  gpu_profiler_front_end.py  gpu_profiler_utils.py  graph_profiler.py  graph_profiler_front_end.py  graph_profiler_utils.py  inline_function.py  invert.py  module_tracer.py  nnc_compile.py  primitive_library.py  prof_test.py  profiling_tracer.py  proxy_based_graph_creation.py  replace_op.py  subgraph_rewriter_basic_use.py  vmap.py  wrap_output_dynamically.py
gat/: README.md  main.py  requirements.txt
gcn/: README.md  main.py  requirements.txt
hogwild/: main.py  train.py
imagenet/: Cloud ML Roofline.ipynb  MyResnet.py  README.md  alexnet.py  batchnormfp16.py  data.py  data2.py  extract_ILSVRC.sh  finetuen.sh  finetune.py  fp16util.py  image_load.py  main-apex.py  main.py  main_mtgpu.py  main_profile_mtgpu.py  ncu_report_parser.py  ncu_stats.py  requirements.txt  resnet.py  train.py  train_mtgpu.sh  train_mtgpu_profile.sh  transforms.py
language_translation/: README.md  main.py  requirements.txt
logreg/: main.py
memory_network_n2n/: README.md  fetch_data.sh  main.py  net.py  util.py
metric/: evaluation.py  losses.py  train.py
mnist/: README.md  data.py  main.py  requirements.txt
mnist_forward_forward/: README.md  main.py
mnist_hogwild/: README.md  main.py  train.py
mnist_rnn/: README.md  main.py
rbm/: README.MD  main.py  requirements.txt
regression/: README.md  main.py  requirements.txt
reinforce/: README.md  main.py
reinforcement_learning/: README.md  actor_critic.py  dqn.py  mountaincar.py  reinforce.py  requirements.txt
resnet/: README.md  main.py  requirements.txt
sequence_labeling/: README.md  args.py  model.py  train.py
siamese_network/: README.md  main.py
snli/: model.py  spinn.py  train.py  util.py
super_resolution/: README.md  batchsuperres.py  data.py  dataset.py  extrarequirements.txt  main.py  model.py  requirements.txt  super_resolve.py
swin_transformer/: README.md  requirements.txt  swin_transformer.py
time_sequence_prediction/: README.md  generate_sine_wave.py  requirements.txt  train.py
torch_compile/: Training a model with torch.compile().ipynb  main.py
triplet/: README.md  eval_metrics.py  main.py  phototour.py  requirements.txt
u_net/: data_set.py  dataset_preparation.py  fit_functions.py  model.py  test_tools.py  train_u_net.ipynb
vae/: README.md  main.py  requirements.txt
vision_transformer/: README.md  main.py  requirements.txt
word_language_model/: README.md  alias_multinomial.py  data.py  fp16util.py  generate.py  linear_nce.py  main.py  model.py  nce_loss.py  requirements.txt  rnn_modules.py  sample.py  word_language_model_and_torchtext.ipynb
(+371 files in other folders)
